fix: Ticket 1302 -  adjusted menu padding and fixed z-index

--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -4,6 +4,7 @@
 
 .navs {
   position: absolute;
+  z-index: 99;
   top: 0;
   left: 0;
   right: 0;
@@ -26,7 +27,7 @@
 .nav {
   z-index: 10;
   min-height: 600px;
-  padding: 120px 20px 30px 125px;
+  padding: 120px 30px 30px 30px;
   flex-direction: column;
 
   ul {
